--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -107,6 +107,7 @@ input[type="range"]::-webkit-slider-thumb {
 	padding: 5px;
 	border-radius: 5px;
 	box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.1);
+	display: flex;
 }
 
 .chat-inputs-container textarea {
