Update chat content area ID and input text ID

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -96,7 +96,7 @@ input[type="range"]::-webkit-slider-thumb {
 	max-height: 100vh;
 }
 
-.chat-content-area {
+#chat-content-area {
 	overflow: auto;
 	height: 100vh;
 	overflow-x: hidden;
