--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -12,19 +12,6 @@ body {
 	min-height: 100vh;
 }
 
-.side-nav {
-	background-color: #1f2123;
-	margin: 0px;
-	box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.1);
-	overflow: auto;
-	height: 100vh;
-	background-color: #1f2123;
-	margin: 0px;
-	box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.1);
-	overflow: auto;
-	height: 100vh;
-}
-
 .chat-btn {
 	border: 1px solid rgb(96, 95, 95);
 	height: 40px;
@@ -65,6 +52,15 @@ input[type="range"]::-webkit-slider-thumb {
 	cursor: pointer;
 	-webkit-appearance: none;
 	margin-top: -7px;
+}
+
+.side-nav {
+	background-color: #1f2123;
+	margin: 0px;
+	box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.1);
+	overflow: auto;
+	height: 100vh;
+	width: 260px;
 }
 
 .side-nav ul {
