--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1,14 +1,23 @@
 * {
 	box-sizing: border-box;
 }
+a {
+	display: inline-block;
+}
+
+/* クリック */
+a:active {
+	/* スケールを小さく	 */
+	transform: scale(0.95);
+	transition: all 0.1s ease;
+}
 
 body {
 	background-color: #eee;
 	margin: 0;
 	padding: 0;
-	color: white;
-	padding: 1px;
-	padding-top: 2px;
+	color: #000;
+
 	min-height: 100vh;
 }
 
@@ -16,6 +25,7 @@ body {
 	border: 1px solid rgb(96, 95, 95);
 	height: 40px;
 	border-radius: 5px;
+	color: #fff;
 }
 
 .chat-btn:hover {
@@ -83,7 +93,7 @@ input[type="range"]::-webkit-slider-thumb {
 }
 
 .content {
-	background-color: #353641;
+	background-color: #fff;
 	margin: 0px;
 	box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.1);
 	flex: 1; /* チャット欄を残りのスペースいっぱいに広げる */
@@ -99,29 +109,28 @@ input[type="range"]::-webkit-slider-thumb {
 }
 
 .chat-inputs-container {
-	background-color: #40414f;
+	background-color: #fff;
 	padding: 5px;
 	border-radius: 5px;
 	box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.1);
 	display: flex;
+	max-width: 100%;
 }
 
 .chat-inputs-container textarea {
 	background-color: transparent;
 	outline: none;
 	border: none;
-	color: #ffffff;
+
 	resize: none;
 }
 
 .chat-inputs-area-inner {
-	padding-top: 30px;
-	padding-left: 150px;
-	padding-right: 150px;
+	padding: 50px 200px;
 }
 
 .fa-paper-plane {
-	color: grey;
+	color: #fff;
 	cursor: pointer;
 }
 
@@ -132,7 +141,6 @@ input[type="range"]::-webkit-slider-thumb {
 .user-chat-box {
 	padding: 20px;
 	padding-left: 150px;
-	color: #ffffff;
 }
 
 .form-select {
@@ -148,10 +156,10 @@ small {
 }
 
 .gpt-chat-box {
-	background-color: #404350;
+	background-color: #fff;
 	padding: 20px;
 	padding-left: 150px;
-	color: #ffffff;
+	color: #000;
 }
 
 .chat-icon {
@@ -165,10 +173,35 @@ small {
 	margin: 0;
 	padding: 0;
 }
+.checkbox-container {
+	position: relative;
+}
+
+.checkbox-container input {
+	display: none;
+}
+
+.checkbox-container .checked-icon,
+.checkbox-container .unchecked-icon {
+	position: absolute;
+	transition: opacity 0.3s;
+}
+
+.checkbox-container .checked-icon {
+	opacity: 0;
+}
+
+.checkbox-container input:checked ~ .checked-icon {
+	opacity: 1;
+}
+
+.checkbox-container input:checked ~ .unchecked-icon {
+	opacity: 0;
+}
 
 footer {
-	background-color: #303235;
-	color: #ffffff;
+	background-color: #fff;
+
 	height: 30px;
 	font-size: 11px;
 }
