--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -2,6 +2,8 @@
 
 * {
 	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 }
 
 a {
@@ -26,9 +28,9 @@ body {
 
 .chat-btn {
 	border: 1px solid rgb(96, 95, 95);
-	height: 40px;
 	border-radius: 5px;
 	color: #fff;
+	height: 40px;
 }
 
 .chat-btn:hover {
@@ -69,10 +71,14 @@ input[type="range"]::-webkit-slider-thumb {
 
 .side-nav {
 	background-color: #1f2123;
-	margin: 0px;
 	box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.1);
-	overflow: auto;
+	color: #fff;
+	display: flex;
+	flex-direction: column;
 	height: 100vh;
+	justify-content: space-between;
+	margin: 0px;
+	overflow: auto;
 	width: 260px;
 }
 
@@ -95,14 +101,35 @@ input[type="range"]::-webkit-slider-thumb {
 	margin-right: 10px;
 }
 
+.history-date {
+	color: #999;
+	font-size: 12px;
+	padding: 0.5rem;
+}
+
+.chat-items {
+	border-radius: 5px;
+	color: #fff;
+	height: 40px;
+}
+
+.chat-items:hover {
+	background-color: rgb(79, 79, 79);
+	transition: background-color 0.5s ease;
+}
+
+.modal-body {
+	color: #000;
+	padding: 20px;
+}
+
 .content {
 	background-color: #fff;
-	margin: 0px;
 	box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.1);
-	flex: 1;
-	/* チャット欄を残りのスペースいっぱいに広げる */
 	display: flex;
+	flex: 1;
 	flex-direction: column;
+
 	max-height: 100vh;
 }
 
@@ -115,7 +142,7 @@ input[type="range"]::-webkit-slider-thumb {
 .chat-inputs-container {
 	background-color: #fff;
 	padding: 5px;
-	border-radius: 5px;
+	border-radius: 10px;
 	box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.1);
 	display: flex;
 	max-width: 100%;
@@ -125,7 +152,6 @@ input[type="range"]::-webkit-slider-thumb {
 	background-color: transparent;
 	outline: none;
 	border: none;
-
 	resize: none;
 }
 
